--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title></title>
 		<script src="js/jquery.js"></script>
 		<script src="js/gameplay.js"></script>
+		<link rel="stylesheet" href="css/stylesheet.css"/>
 	</head>
 	<body>
 		<div id="board">
